my-app/src/components/HeroSection/HeroSection.css
/*video {
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: -1;
  }
*/  
  .hero-container {
    background: linear-gradient(rgba(2,127,119,0.5),rgba(2,127,119,0.5)), url("https://res.cloudinary.com/dylut4r4t/image/upload/v1601941943/3dBusinessHub/RHC_0054_fjetdq.jpg") center center/cover no-repeat; 
    height: 100vh;
    width: 100%;
    margin-top: -4vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
    object-fit: contain;
  }
  

  .hero-container > h1 {
    color: #fff;
    font-size: 100px;
    margin-top: -100px;
    font-family: 'Roboto';
  }
  
  .hero-container > p {
    margin-top: 8px;
    text-align: center;
    color: #fff;
    font-size: 32px;
    font-family: 'Roboto';
  }

  .arrow-pointing{
    color: #fff;
    position:absolute;
    font-size: 34px;
    margin-top: 80vh;
    text-decoration: none;
  }

  .arrow-pointing:hover {
    text-decoration: none;
    color: #fff;
    transition: all 0.2s ease-out;
  }

  .blink {
    animation: blink 3s steps(5, start) infinite;
    -webkit-animation: blink 2s steps(5, start) infinite;
  }
  @keyframes blink {
    to {
      visibility: hidden;
    }
  }
  @-webkit-keyframes blink {
    to {
      visibility: hidden;
    }
  }
  
  .hero-btns {
    margin-top: 32px;
  }
  
  .hero-btns .btn {
    margin: 6px;
  }
  
  .fa-play-circle {
    margin-left: 4px;
  }

  .nav-about {
    color: #fff;
    text-decoration: none; 
  }
  
  @media screen and (max-width: 960px) {
    .hero-container > h1 {
      font-size: 50px;
      margin-top: -150px;
    }
  }
  
  @media screen and (max-width: 768px) {
    .hero-container{
      height: 50vh;
      width: 100vw;
      display: flex;
      justify-content: center;
    }

    .hero-container > h1 {
      width: 100w;
      align-self: center;
      font-size: 30px;
      margin-top: 10px;
      align-content: center;
    }
  
    .hero-container > p {
      width: 88vw;
      font-size: 17px;
    }
  
    .btn-mobile {
      display: block;
      text-decoration: none;
    }
  
    .btn {
      width: 100%;
    }

    .arrow-pointing{
      margin-top: 40vh;
    }
  }

